hw2/compiler_hw2.output
Terminals unused in grammar

    COMMA
    QUOTA
    MOD
    POS
    NEG


State 134 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Type: TypeName
    5     | ArrayType

    6 TypeName: INT
    7         | FLOAT
    8         | STRING
    9         | BOOL

   10 ArrayType: LBRACK Expression RBRACK Type

   11 LBR: LBRACK

   12 RBR: RBRACK

   13 Expression: Expression LO B1
   14           | B1

   15 B1: B1 LA B2
   16   | B2

   17 B2: B2 Cmp_op B3
   18   | B3

   19 B3: B3 Add_op B4
   20   | B4

   21 B4: B4 Mul_op UnaryExpr
   22   | UnaryExpr

   23 UnaryExpr: PrimaryExpr
   24          | Unary_op UnaryExpr

   25 LA: LAND

   26 LO: LOR

   27 Cmp_op: EQL
   28       | NEQ
   29       | LSS
   30       | LEQ
   31       | GTR
   32       | GEQ

   33 Add_op: ADD
   34       | SUB

   35 Mul_op: MUL
   36       | QUO
   37       | REM

   38 Unary_op: ADD
   39         | SUB
   40         | NOT

   41 PrimaryExpr: Operand
   42            | IndexExpr
   43            | ConversionExpr

   44 Operand: Literal
   45        | IDENT
   46        | LPA Expression RPA

   47 LPA: LPAREN

   48 RPA: RPAREN

   49 Literal: INT_LIT
   50        | FLOAT_LIT
   51        | BOOL_LIT
   52        | STRING_LIT
   53        | TRUE
   54        | FALSE

   55 IndexExpr: PrimaryExpr LBR Expression RBR

   56 ConversionExpr: Type LPAREN Expression RPAREN

   57 Statement: DeclarationStmt NEWLINE
   58          | SimpleStmt NEWLINE
   59          | Block NEWLINE
   60          | IfStmt NEWLINE
   61          | ForStmt NEWLINE
   62          | PrintStmt NEWLINE
   63          | NEWLINE

   64 SimpleStmt: AssignmentStmt
   65           | Expression
   66           | IncDecStmt

   67 DeclarationStmt: VAR IDENT Type DeclarationAssign

   68 DeclarationAssign: ASSIGN Expression
   69                  | %empty

   70 AssignmentStmt: ExpressionVar Assign_op Expression

   71 ExpressionVar: Expression

   72 Assign_op: ASSIGN
   73          | ADD_ASSIGN
   74          | SUB_ASSIGN
   75          | MUL_ASSIGN
   76          | QUO_ASSIGN
   77          | REM_ASSIGN

   78 IncDecStmt: Expression IncDec

   79 IncDec: INC
   80       | DEC

   81 $@1: %empty

   82 $@2: %empty

   83 Block: LBRACE $@1 StatementList $@2 RBRACE

   84 $@3: %empty

   85 IfStmt: IF Condition $@3 Block ElseIfStmt

   86 Condition: Expression

   87 OptionalIfStmt: IfStmt
   88               | Block

   89 ElseIfStmt: ElseIfStmt ELSE OptionalIfStmt
   90           | %empty

   91 ForStmt: FOR ForCondition Block

   92 ForCondition: Condition
   93             | ForClause

   94 $@4: %empty

   95 $@5: %empty

   96 ForClause: InitStmt $@4 SEMICOLON Condition $@5 SEMICOLON PosStmt

   97 InitStmt: SimpleStmt

   98 PosStmt: SimpleStmt

   99 PrintStmt: PrintType LPAREN Expression RPAREN

  100 PrintType: PRINT
  101          | PRINTLN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LPAREN (258) 47 56 99
    RPAREN (259) 48 56 99
    LBRACK (260) 10 11
    RBRACK (261) 10 12
    LBRACE (262) 83
    RBRACE (263) 83
    SEMICOLON (264) 96
    COMMA (265)
    QUOTA (266)
    NEWLINE (267) 57 58 59 60 61 62 63
    ADD (268) 33 38
    SUB (269) 34 39
    MUL (270) 35
    QUO (271) 36
    MOD (272)
    INC (273) 79
    DEC (274) 80
    REM (275) 37
    POS (276)
    NEG (277)
    LSS (278) 29
    GTR (279) 31
    LEQ (280) 30
    GEQ (281) 32
    EQL (282) 27
    NEQ (283) 28
    ASSIGN (284) 68 72
    ADD_ASSIGN (285) 73
    SUB_ASSIGN (286) 74
    MUL_ASSIGN (287) 75
    QUO_ASSIGN (288) 76
    REM_ASSIGN (289) 77
    LAND (290) 25
    LOR (291) 26
    NOT (292) 40
    TRUE (293) 53
    FALSE (294) 54
    IF (295) 85
    ELSE (296) 89
    FOR (297) 91
    VAR (298) 67
    PRINT (299) 100
    PRINTLN (300) 101
    IDENT <string> (301) 45 67
    INT <string> (302) 6
    FLOAT <string> (303) 7
    BOOL <string> (304) 9
    STRING <string> (305) 8
    INT_LIT <i_val> (306) 49
    FLOAT_LIT <f_val> (307) 50
    STRING_LIT <string> (308) 52
    BOOL_LIT <b_val> (309) 51


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    Program (56)
        on left: 1
        on right: 0
    StatementList (57)
        on left: 2 3
        on right: 1 2 83
    Type <string> (58)
        on left: 4 5
        on right: 10 56 67
    TypeName <string> (59)
        on left: 6 7 8 9
        on right: 4
    ArrayType <string> (60)
        on left: 10
        on right: 5
    LBR (61)
        on left: 11
        on right: 55
    RBR (62)
        on left: 12
        on right: 55
    Expression <string> (63)
        on left: 13 14
        on right: 10 13 46 55 56 65 68 70 71 78 86 99
    B1 <string> (64)
        on left: 15 16
        on right: 13 14 15
    B2 <string> (65)
        on left: 17 18
        on right: 15 16 17
    B3 <string> (66)
        on left: 19 20
        on right: 17 18 19
    B4 <string> (67)
        on left: 21 22
        on right: 19 20 21
    UnaryExpr <string> (68)
        on left: 23 24
        on right: 21 22 24
    LA <string> (69)
        on left: 25
        on right: 15
    LO <string> (70)
        on left: 26
        on right: 13
    Cmp_op <string> (71)
        on left: 27 28 29 30 31 32
        on right: 17
    Add_op <string> (72)
        on left: 33 34
        on right: 19
    Mul_op <string> (73)
        on left: 35 36 37
        on right: 21
    Unary_op (74)
        on left: 38 39 40
        on right: 24
    PrimaryExpr <string> (75)
        on left: 41 42 43
        on right: 23 55
    Operand <string> (76)
        on left: 44 45 46
        on right: 41
    LPA (77)
        on left: 47
        on right: 46
    RPA (78)
        on left: 48
        on right: 46
    Literal <string> (79)
        on left: 49 50 51 52 53 54
        on right: 44
    IndexExpr <string> (80)
        on left: 55
        on right: 42
    ConversionExpr <string> (81)
        on left: 56
        on right: 43
    Statement (82)
        on left: 57 58 59 60 61 62 63
        on right: 2 3
    SimpleStmt (83)
        on left: 64 65 66
        on right: 58 97 98
    DeclarationStmt (84)
        on left: 67
        on right: 57
    DeclarationAssign (85)
        on left: 68 69
        on right: 67
    AssignmentStmt (86)
        on left: 70
        on right: 64
    ExpressionVar <string> (87)
        on left: 71
        on right: 70
    Assign_op <string> (88)
        on left: 72 73 74 75 76 77
        on right: 70
    IncDecStmt (89)
        on left: 78
        on right: 66
    IncDec (90)
        on left: 79 80
        on right: 78
    Block (91)
        on left: 83
        on right: 59 85 88 91
    $@1 (92)
        on left: 81
        on right: 83
    $@2 (93)
        on left: 82
        on right: 83
    IfStmt (94)
        on left: 85
        on right: 60 87
    $@3 (95)
        on left: 84
        on right: 85
    Condition (96)
        on left: 86
        on right: 85 92 96
    OptionalIfStmt (97)
        on left: 87 88
        on right: 89
    ElseIfStmt (98)
        on left: 89 90
        on right: 85 89
    ForStmt (99)
        on left: 91
        on right: 61
    ForCondition (100)
        on left: 92 93
        on right: 91
    ForClause (101)
        on left: 96
        on right: 93
    $@4 (102)
        on left: 94
        on right: 96
    $@5 (103)
        on left: 95
        on right: 96
    InitStmt (104)
        on left: 97
        on right: 96
    PosStmt (105)
        on left: 98
        on right: 96
    PrintStmt (106)
        on left: 99
        on right: 62
    PrintType <string> (107)
        on left: 100 101
        on right: 99


State 0

    0 $accept: . Program $end

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Program          go to state 24
    StatementList    go to state 25
    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    LPA              go to state 38
    Literal          go to state 39
    IndexExpr        go to state 40
    ConversionExpr   go to state 41
    Statement        go to state 42
    SimpleStmt       go to state 43
    DeclarationStmt  go to state 44
    AssignmentStmt   go to state 45
    ExpressionVar    go to state 46
    IncDecStmt       go to state 47
    Block            go to state 48
    IfStmt           go to state 49
    ForStmt          go to state 50
    PrintStmt        go to state 51
    PrintType        go to state 52


State 1

   47 LPA: LPAREN .

    $default  reduce using rule 47 (LPA)


State 2

   10 ArrayType: LBRACK . Expression RBRACK Type

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 53
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41


State 3

   83 Block: LBRACE . $@1 StatementList $@2 RBRACE

    $default  reduce using rule 81 ($@1)

    $@1  go to state 54


State 4

   63 Statement: NEWLINE .

    $default  reduce using rule 63 (Statement)


State 5

   38 Unary_op: ADD .

    $default  reduce using rule 38 (Unary_op)


State 6

   39 Unary_op: SUB .

    $default  reduce using rule 39 (Unary_op)


State 7

   40 Unary_op: NOT .

    $default  reduce using rule 40 (Unary_op)


State 8

   53 Literal: TRUE .

    $default  reduce using rule 53 (Literal)


State 9

   54 Literal: FALSE .

    $default  reduce using rule 54 (Literal)


State 10

   85 IfStmt: IF . Condition $@3 Block ElseIfStmt

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 55
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41
    Condition       go to state 56


State 11

   91 ForStmt: FOR . ForCondition Block

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 57
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41
    SimpleStmt      go to state 58
    AssignmentStmt  go to state 45
    ExpressionVar   go to state 46
    IncDecStmt      go to state 47
    Condition       go to state 59
    ForCondition    go to state 60
    ForClause       go to state 61
    InitStmt        go to state 62


State 12

   67 DeclarationStmt: VAR . IDENT Type DeclarationAssign

    IDENT  shift, and go to state 63


State 13

  100 PrintType: PRINT .

    $default  reduce using rule 100 (PrintType)


State 14

  101 PrintType: PRINTLN .

    $default  reduce using rule 101 (PrintType)


State 15

   45 Operand: IDENT .

    $default  reduce using rule 45 (Operand)


State 16

    6 TypeName: INT .

    $default  reduce using rule 6 (TypeName)


State 17

    7 TypeName: FLOAT .

    $default  reduce using rule 7 (TypeName)


State 18

    9 TypeName: BOOL .

    $default  reduce using rule 9 (TypeName)


State 19

    8 TypeName: STRING .

    $default  reduce using rule 8 (TypeName)


State 20

   49 Literal: INT_LIT .

    $default  reduce using rule 49 (Literal)


State 21

   50 Literal: FLOAT_LIT .

    $default  reduce using rule 50 (Literal)


State 22

   52 Literal: STRING_LIT .

    $default  reduce using rule 52 (Literal)


State 23

   51 Literal: BOOL_LIT .

    $default  reduce using rule 51 (Literal)


State 24

    0 $accept: Program . $end

    $end  shift, and go to state 64


State 25

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    $default  reduce using rule 1 (Program)

    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    LPA              go to state 38
    Literal          go to state 39
    IndexExpr        go to state 40
    ConversionExpr   go to state 41
    Statement        go to state 65
    SimpleStmt       go to state 43
    DeclarationStmt  go to state 44
    AssignmentStmt   go to state 45
    ExpressionVar    go to state 46
    IncDecStmt       go to state 47
    Block            go to state 48
    IfStmt           go to state 49
    ForStmt          go to state 50
    PrintStmt        go to state 51
    PrintType        go to state 52


State 26

   56 ConversionExpr: Type . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 66


State 27

    4 Type: TypeName .

    $default  reduce using rule 4 (Type)


State 28

    5 Type: ArrayType .

    $default  reduce using rule 5 (Type)


State 29

   13 Expression: Expression . LO B1
   65 SimpleStmt: Expression .
   71 ExpressionVar: Expression .
   78 IncDecStmt: Expression . IncDec

    INC  shift, and go to state 67
    DEC  shift, and go to state 68
    LOR  shift, and go to state 69

    LBRACE    reduce using rule 65 (SimpleStmt)
    NEWLINE   reduce using rule 65 (SimpleStmt)
    $default  reduce using rule 71 (ExpressionVar)

    LO      go to state 70
    IncDec  go to state 71


State 30

   14 Expression: B1 .
   15 B1: B1 . LA B2

    LAND  shift, and go to state 72

    $default  reduce using rule 14 (Expression)

    LA  go to state 73


State 31

   16 B1: B2 .
   17 B2: B2 . Cmp_op B3

    LSS  shift, and go to state 74
    GTR  shift, and go to state 75
    LEQ  shift, and go to state 76
    GEQ  shift, and go to state 77
    EQL  shift, and go to state 78
    NEQ  shift, and go to state 79

    $default  reduce using rule 16 (B1)

    Cmp_op  go to state 80


State 32

   18 B2: B3 .
   19 B3: B3 . Add_op B4

    ADD  shift, and go to state 81
    SUB  shift, and go to state 82

    $default  reduce using rule 18 (B2)

    Add_op  go to state 83


State 33

   20 B3: B4 .
   21 B4: B4 . Mul_op UnaryExpr

    MUL  shift, and go to state 84
    QUO  shift, and go to state 85
    REM  shift, and go to state 86

    $default  reduce using rule 20 (B3)

    Mul_op  go to state 87


State 34

   22 B4: UnaryExpr .

    $default  reduce using rule 22 (B4)


State 35

   24 UnaryExpr: Unary_op . UnaryExpr

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    UnaryExpr       go to state 88
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41


State 36

   23 UnaryExpr: PrimaryExpr .
   55 IndexExpr: PrimaryExpr . LBR Expression RBR

    LBRACK  shift, and go to state 89

    $default  reduce using rule 23 (UnaryExpr)

    LBR  go to state 90


State 37

   41 PrimaryExpr: Operand .

    $default  reduce using rule 41 (PrimaryExpr)


State 38

   46 Operand: LPA . Expression RPA

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 91
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41


State 39

   44 Operand: Literal .

    $default  reduce using rule 44 (Operand)


State 40

   42 PrimaryExpr: IndexExpr .

    $default  reduce using rule 42 (PrimaryExpr)


State 41

   43 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 43 (PrimaryExpr)


State 42

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 43

   58 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 92


State 44

   57 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 93


State 45

   64 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 64 (SimpleStmt)


State 46

   70 AssignmentStmt: ExpressionVar . Assign_op Expression

    ASSIGN      shift, and go to state 94
    ADD_ASSIGN  shift, and go to state 95
    SUB_ASSIGN  shift, and go to state 96
    MUL_ASSIGN  shift, and go to state 97
    QUO_ASSIGN  shift, and go to state 98
    REM_ASSIGN  shift, and go to state 99

    Assign_op  go to state 100


State 47

   66 SimpleStmt: IncDecStmt .

    $default  reduce using rule 66 (SimpleStmt)


State 48

   59 Statement: Block . NEWLINE

    NEWLINE  shift, and go to state 101


State 49

   60 Statement: IfStmt . NEWLINE

    NEWLINE  shift, and go to state 102


State 50

   61 Statement: ForStmt . NEWLINE

    NEWLINE  shift, and go to state 103


State 51

   62 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 104


State 52

   99 PrintStmt: PrintType . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 105


State 53

   10 ArrayType: LBRACK Expression . RBRACK Type
   13 Expression: Expression . LO B1

    RBRACK  shift, and go to state 106
    LOR     shift, and go to state 69

    LO  go to state 70


State 54

   83 Block: LBRACE $@1 . StatementList $@2 RBRACE

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    StatementList    go to state 107
    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    LPA              go to state 38
    Literal          go to state 39
    IndexExpr        go to state 40
    ConversionExpr   go to state 41
    Statement        go to state 42
    SimpleStmt       go to state 43
    DeclarationStmt  go to state 44
    AssignmentStmt   go to state 45
    ExpressionVar    go to state 46
    IncDecStmt       go to state 47
    Block            go to state 48
    IfStmt           go to state 49
    ForStmt          go to state 50
    PrintStmt        go to state 51
    PrintType        go to state 52


State 55

   13 Expression: Expression . LO B1
   86 Condition: Expression .

    LOR  shift, and go to state 69

    $default  reduce using rule 86 (Condition)

    LO  go to state 70


State 56

   85 IfStmt: IF Condition . $@3 Block ElseIfStmt

    $default  reduce using rule 84 ($@3)

    $@3  go to state 108


State 57

   13 Expression: Expression . LO B1
   65 SimpleStmt: Expression .
   71 ExpressionVar: Expression .
   78 IncDecStmt: Expression . IncDec
   86 Condition: Expression .

    INC  shift, and go to state 67
    DEC  shift, and go to state 68
    LOR  shift, and go to state 69

    LBRACE     reduce using rule 86 (Condition)
    SEMICOLON  reduce using rule 65 (SimpleStmt)
    $default   reduce using rule 71 (ExpressionVar)

    LO      go to state 70
    IncDec  go to state 71


State 58

   97 InitStmt: SimpleStmt .

    $default  reduce using rule 97 (InitStmt)


State 59

   92 ForCondition: Condition .

    $default  reduce using rule 92 (ForCondition)


State 60

   91 ForStmt: FOR ForCondition . Block

    LBRACE  shift, and go to state 3

    Block  go to state 109


State 61

   93 ForCondition: ForClause .

    $default  reduce using rule 93 (ForCondition)


State 62

   96 ForClause: InitStmt . $@4 SEMICOLON Condition $@5 SEMICOLON PosStmt

    $default  reduce using rule 94 ($@4)

    $@4  go to state 110


State 63

   67 DeclarationStmt: VAR IDENT . Type DeclarationAssign

    LBRACK  shift, and go to state 2
    INT     shift, and go to state 16
    FLOAT   shift, and go to state 17
    BOOL    shift, and go to state 18
    STRING  shift, and go to state 19

    Type       go to state 111
    TypeName   go to state 27
    ArrayType  go to state 28


State 64

    0 $accept: Program $end .

    $default  accept


State 65

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 66

   56 ConversionExpr: Type LPAREN . Expression RPAREN

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 112
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41


State 67

   79 IncDec: INC .

    $default  reduce using rule 79 (IncDec)


State 68

   80 IncDec: DEC .

    $default  reduce using rule 80 (IncDec)


State 69

   26 LO: LOR .

    $default  reduce using rule 26 (LO)


State 70

   13 Expression: Expression LO . B1

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B1              go to state 113
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41


State 71

   78 IncDecStmt: Expression IncDec .

    $default  reduce using rule 78 (IncDecStmt)


State 72

   25 LA: LAND .

    $default  reduce using rule 25 (LA)


State 73

   15 B1: B1 LA . B2

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B2              go to state 114
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41


State 74

   29 Cmp_op: LSS .

    $default  reduce using rule 29 (Cmp_op)


State 75

   31 Cmp_op: GTR .

    $default  reduce using rule 31 (Cmp_op)


State 76

   30 Cmp_op: LEQ .

    $default  reduce using rule 30 (Cmp_op)


State 77

   32 Cmp_op: GEQ .

    $default  reduce using rule 32 (Cmp_op)


State 78

   27 Cmp_op: EQL .

    $default  reduce using rule 27 (Cmp_op)


State 79

   28 Cmp_op: NEQ .

    $default  reduce using rule 28 (Cmp_op)


State 80

   17 B2: B2 Cmp_op . B3

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B3              go to state 115
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    LPA             go to state 38
    Literal         go to state 39
    IndexExpr       go to state 40
    ConversionExpr  go to state 41


State 81

   33 Add_op: ADD .

    $default  reduce using rule 33 (Add_op)


State 82

   34 Add_op: SUB .

    $default  reduce using rule 34 (Add_op)


State 83

   19 B3: B3 Add_op . B4

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23
